# exetasi

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  Requirements.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
backend/: README.md  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/v1/: admin.py  alerts.py  audit.py  auth.py  exams.py  messages.py  orgs.py  placeholders.py  router.py  users.py
backend/app/core/: config.py  ratelimit.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  alert.py  audit.py  base.py  exam.py  message.py  organization.py  user.py
backend/app/schemas/: admin.py  alert.py  auth.py  exam.py  message.py  organization.py  user.py
backend/app/services/: admin_service.py  alert_service.py  audit_service.py  message_service.py  org_service.py  session_service.py
backend/app/utils/: ip.py  slug.py  username.py
backend/migrations/: env.py
backend/migrations/versions/: 20260412_0001_init_auth_tables.py  20260412_0002_organizations.py  20260412_0003_exams.py  20260417_0004_org_theming.py  20260417_0005_audit_log.py  20260417_0006_superuser_flags.py  20260417_0007_messages.py  20260417_0008_alerts.py
backend/tests/: conftest.py  test_admin.py  test_alerts.py  test_audit.py  test_auth_dev.py  test_auth_providers.py  test_exams.py  test_health.py  test_messages.py  test_oauth_start.py  test_orgs.py  test_rate_limit_config.py  test_rate_limit_keys.py  test_username_util.py
frontend/: package.json  playwright.config.ts  (+2 more)
(+45 files in other folders)
