[project]
name = "exetasi-backend"
version = "0.0.1"
description = "Exetasi FastAPI backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.34.0",
  "sqlalchemy[asyncio]>=2.0.40",
  "asyncpg>=0.30.0",
  "alembic>=1.15.0",
  "pydantic-settings>=2.8.0",
  "httpx>=0.28.0",
  "itsdangerous>=2.2.0",
  "slowapi>=0.1.9",
  # limits (shipped with slowapi) uses the redis-py client for both Redis
  # and Valkey. We pin >=5 because that line ships the async Sentinel /
  # TLS fixes and is what Valkey 8 is regression-tested against.
  "redis>=5.0.0",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.21.0",
  "pytest>=8.3.0",
  "pytest-asyncio>=0.25.0",
  "psycopg[binary]>=3.2.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
